-------------------------------
FlexCat Open Source - Changelog
-------------------------------

$Id$
$URL$

2007-01-06  David Rey <tactica@users.sourceforge.net>

    * Makefile: fixed the paths added recently to keep make happy

2007-01-01  David Rey <tactica@users.sourceforge.net>

    * ChangeLog: replaced "Source" with "URL" keyword for SVN
    * gpl.txt: renamed as COPYING
    * developer.readme: renamed as README
    * todo: renamed as TODO
    * misc: rearranged the whole directory hierarchy
    * Makefile: modified to suit the changes in the directory layout,
      dropped the removal of m68k specific builds from the "clean" target
      (this belongs to the smakefile), added removal of the guide files
      to it, and added a "realclean" one which additionally removes the
      autogenerated headers
    * createcat.c, createcat.h, createcatsrc.c, createcatsrc.h, createct.c,
      createct.h, flexcat.h, getft.c, globals.c, globals.h, main.c,
      readprefs.c, readprefs.h, scancd.c, scancd.h, scanct.c, scanct.h,
      showfuncs.c, showfuncs.h, swapfuncs.c, swapfuncs.h, utils.c, utils.h:
      updated copyright notice (2006->2007)
    * NoAutoC_c.sd, NoAutoC_h.sd: added the missing Id keyword for SVN
    * Cat2h_c.sd: removed some empty lines and moved ##stringtype to the
      beginning to make it consistent with the other source descriptors.
    * AmigaOberon.sd: replaced the copyright symbol with something
      friendly with all charsets
    * ARexx.sd: replaced germanisms with English text
    * AutoC_c.sd, C++_h.sd, C_c.sd, C_c_V20.sd: better English comments now
    * Hardcode_c.sd: updated copyright notice (2006->2007) and fixed some
      typos
    * Oberon-A.sd: typos fixed
    * Minor changes in most source descriptors to make them more consistent
    * scanct.c: now checks for trailing spaces added in the translation, too
      (fixes bug #747905)
    * FlexCat.cd: added new error string to match the new feature